--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Rescues -- Juvenile fiction'
 - !lcsh 'Seafaring life -- Juvenile fiction'
 - !lcsh 'Smugglers -- Juvenile fiction'
+- GITenberg
 title: The Lighthouse
 url: http://www.gutenberg.org/ebooks/21746
